--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -33,7 +33,7 @@ $light-green: #E6EFC2;
 
 
 // Background Color
-$base-background-color: #fbfbfb;
+$base-background-color: #ffffff;
 
 // Font Colors
 $base-font-color: $dark-gray;
